--- a/page11.html
+++ b/page11.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/u">bootstrap html templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-8q">
+<section class="engine"><a href="https://mobirise.info/z">best css templates</a></section><section class="footer2 cid-s9LnWfdHXQ" once="footers" id="footer2-8q">
 
     
     
@@ -140,8 +140,8 @@
         </div>
         <div class="row mbr-gallery mt-4">
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#saMdMOOQzX-modal">
-                    <img class="w-100" src="assets/images/2743853-1-506x506.png" alt="" data-slide-to="0" data-target="#lb-saMdMOOQzX">
+                <div class="item-wrapper" data-toggle="modal" data-target="#saMfnsLpWV-modal">
+                    <img class="w-100" src="assets/images/2743853-1-506x506.png" alt="" data-slide-to="0" data-target="#lb-saMfnsLpWV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -149,8 +149,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>FALLECIDOS</strong><br>30,812</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#saMdMOOQzX-modal">
-                    <img class="w-100" src="assets/images/82415-506x506.png" alt="" data-slide-to="1" data-target="#lb-saMdMOOQzX">
+                <div class="item-wrapper" data-toggle="modal" data-target="#saMfnsLpWV-modal">
+                    <img class="w-100" src="assets/images/82415-506x506.png" alt="" data-slide-to="1" data-target="#lb-saMfnsLpWV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -158,8 +158,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>LETALIDAD</strong><br>4.20%</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#saMdMOOQzX-modal">
-                    <img class="w-100" src="assets/images/3150472-506x506.png" alt="" data-slide-to="2" data-target="#lb-saMdMOOQzX">
+                <div class="item-wrapper" data-toggle="modal" data-target="#saMfnsLpWV-modal">
+                    <img class="w-100" src="assets/images/3150472-506x506.png" alt="" data-slide-to="2" data-target="#lb-saMfnsLpWV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -167,8 +167,8 @@
                 <h6 class="mbr-item-subtitle mbr-fonts-style align-center mb-2 mt-2 display-7"><strong>PCR(+)</strong><br>173,475</h6>
             </div>
             <div class="col-12 col-md-6 col-lg-3 item gallery-image">
-                <div class="item-wrapper" data-toggle="modal" data-target="#saMdMOOQzX-modal">
-                    <img class="w-100" src="assets/images/125016-506x506.png" alt="" data-slide-to="3" data-target="#lb-saMdMOOQzX">
+                <div class="item-wrapper" data-toggle="modal" data-target="#saMfnsLpWV-modal">
+                    <img class="w-100" src="assets/images/125016-506x506.png" alt="" data-slide-to="3" data-target="#lb-saMfnsLpWV">
                     <div class="icon-wrapper">
                         <span class="mobi-mbri mobi-mbri-search mbr-iconfont mbr-iconfont-btn"></span>
                     </div>
@@ -177,11 +177,11 @@
             </div>
         </div>
 
-        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="saMdMOOQzX-modal">
+        <div class="modal mbr-slider" tabindex="-1" role="dialog" aria-hidden="true" id="saMfnsLpWV-modal">
             <div class="modal-dialog" role="document">
                 <div class="modal-content">
                     <div class="modal-body">
-                        <div class="carousel slide" id="lb-saMdMOOQzX" data-interval="5000">
+                        <div class="carousel slide" id="lb-saMfnsLpWV" data-interval="5000">
                             <div class="carousel-inner">
                                 <div class="carousel-item active">
                                     <img class="d-block w-100" src="assets/images/2743853-1-506x506.png" alt="">
@@ -197,18 +197,18 @@
                                 </div>
                             </div>
                             <ol class="carousel-indicators">
-                                <li data-slide-to="0" class="active" data-target="#lb-saMdMOOQzX"></li>
-                                <li data-slide-to="1" data-target="#lb-saMdMOOQzX"></li>
-                                <li data-slide-to="2" data-target="#lb-saMdMOOQzX"></li>
-                                <li data-slide-to="3" data-target="#lb-saMdMOOQzX"></li>
+                                <li data-slide-to="0" class="active" data-target="#lb-saMfnsLpWV"></li>
+                                <li data-slide-to="1" data-target="#lb-saMfnsLpWV"></li>
+                                <li data-slide-to="2" data-target="#lb-saMfnsLpWV"></li>
+                                <li data-slide-to="3" data-target="#lb-saMfnsLpWV"></li>
                             </ol>
                             <a role="button" href="" class="close" data-dismiss="modal" aria-label="Close">
                             </a>
-                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-saMdMOOQzX">
+                            <a class="carousel-control-prev carousel-control" role="button" data-slide="prev" href="#lb-saMfnsLpWV">
                                 <span class="mobi-mbri mobi-mbri-arrow-prev" aria-hidden="true"></span>
                                 <span class="sr-only">Previous</span>
                             </a>
-                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-saMdMOOQzX">
+                            <a class="carousel-control-next carousel-control" role="button" data-slide="next" href="#lb-saMfnsLpWV">
                                 <span class="mobi-mbri mobi-mbri-arrow-next" aria-hidden="true"></span>
                                 <span class="sr-only">Next</span>
                             </a>
