--- a/economía.html
+++ b/economía.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/t">free amp templates</a></section><section class="header4 cid-sazeFcDULY mbr-fullscreen" id="header4-3s">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="header4 cid-sazeFcDULY mbr-fullscreen" id="header4-3s">
 
     
     
@@ -497,13 +497,13 @@ actores clave en la implementación de las acciones sobre el terreno.[8]<br></p>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Información general</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page16.html" class="text-white"><strong>Información general</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page5.html" class="text-white"><strong>Entregables</strong></a></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page3.html" class="text-white text-primary"><strong>Entregables</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
