--- a/page1.html
+++ b/page1.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/j">website templates</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
+<section class="engine"><a href="https://mobirise.info/q">responsive web templates</a></section><section class="header18 cid-s9Lg6V0JRd mbr-fullscreen" id="header18-x">
 
     
 
@@ -466,13 +466,13 @@
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Información general</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page16.html" class="text-white"><strong>Información general</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page5.html" class="text-white"><strong>Entregables</strong></a></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page3.html" class="text-white text-primary"><strong>Entregables</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
