--- a/page2.html
+++ b/page2.html
@@ -61,7 +61,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/h">create a web page</a></section><section class="header12 cid-s9Li6aq2Gc" id="header12-12">
+<section class="engine"><a href="https://mobirise.info/r">free bootstrap templates</a></section><section class="header12 cid-s9Li6aq2Gc" id="header12-12">
 
     
 
@@ -171,13 +171,13 @@
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Información general</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page16.html" class="text-white"><strong>Información general</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page5.html" class="text-white"><strong>Entregables</strong></a></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page3.html" class="text-white text-primary"><strong>Entregables</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
