--- a/page3.html
+++ b/page3.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/c">free site builder</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
+<section class="engine"><a href="https://mobirise.info/s">bootstrap themes</a></section><section class="header8 cid-s9LxlR3hSu mbr-fullscreen" id="header8-1e">
     
 
     
@@ -377,13 +377,13 @@
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Información general</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page16.html" class="text-white"><strong>Información general</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page5.html" class="text-white"><strong>Entregables</strong></a></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page3.html" class="text-white text-primary"><strong>Entregables</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
