--- a/page6.html
+++ b/page6.html
@@ -60,7 +60,7 @@
 
 </section>
 
-<section class="engine"><a href="https://mobirise.info/k">how to develop free website</a></section><section class="header5 cid-sapsypK46x mbr-fullscreen" id="header5-25">
+<section class="engine"><a href="https://mobirise.info/t">amp templates</a></section><section class="header5 cid-sapsypK46x mbr-fullscreen" id="header5-25">
 
     
 
@@ -113,13 +113,13 @@
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><strong>Información general</strong></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page16.html" class="text-white"><strong>Información general</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
             </div>
             <div class="col-6 col-md-4 col-lg-3">
-                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page5.html" class="text-white"><strong>Entregables</strong></a></h5>
+                <h5 class="mbr-section-subtitle mbr-fonts-style mb-2 display-7"><a href="page3.html" class="text-white text-primary"><strong>Entregables</strong></a></h5>
                 <ul class="list mbr-fonts-style display-4">
                     <li class="mbr-text item-wrap"><br></li>
                 </ul>
